Migrate to gradle 6 and junit 5.